# PhySioLog

./: .dockerignore  .flaskenv  .gitignore  AGENTS.md  ChatGPT_instructions.md  Dockerfile  LICENSE  README.md  app.py  config.py  main.py  pyproject.toml  wsgi.py
.github/: copilot-instructions.md
data/: health_data.csv
dev_docs/: MIGRATION_GUIDE.md  POSTGRESQL_SYSTEM_TO_SYSTEM_MIGRATION.md  PRE_DEPLOY_CHECKLIST.md
dev_docs/ai/: AI_INSTRUCTIONS.md
dev_docs/experiments/: OpenAI_test.md
docs/: AI_CONTEXT.md  AI_INSTRUCTIONS.md  API_test.md  ChatGPT_instructions.md  Database_TestingGuide.md  MIGRATION_GUIDE.md  OPENAI_test.md  PRE_DEPLOY_CHECKLIST.md  codex.md
docs/physiology/: bioimpedance_bodyfat.md  fat_loss_physiology.md  total_daily_energy_expenditure.md
physiolog/: __init__.py  config.py  extensions.py  models.py  routes_api.py  routes_web.py  services.py
physiolog/services/: __init__.py  entries.py  openai.py  openai_services.py  stats.py
scripts/: backup_postgres.py  import_data.py
static/css/: main.css
static/js/: dashboard.js  entry.js
templates/: admin.html  base.html  clients.html  coach.html  docs_layout.html  entry.html  index.html  login.html  metabolism.html  overview.html  register.html  test.html  trends.html  user.html  users_list.html
tests/: test_admin_clients_scope.py  test_admin_observed_client.py  test_api_entries_contract.py  test_api_stats_contract.py  test_entry_parsing_helpers.py  test_services.py
